# phantasm

./: .gitignore  CLAUDE.md  README.md  justfile  wrangler.jsonc
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: HANDOFF-app-hosted-tools.md  Phantasm-iOS-Codebase-Review.md  README.md  REAL_UPSTREAM_TESTS.md  SPEC.md  multi-upstream.md  qr-pairing.md  research-problems.md  research-redesign.md  resilient-turns.md  x-research-problems.md
docs/contract-fixtures/: README.md
docs/contract-fixtures/orchestrator-sse/: app-tool-call.sse  status-reasoning-image.sse  stream-error.sse
ios/: README.md  project.yml
ios/App/: AppEnvironment.swift  BackendSession.swift  CalendarProvider.swift  ChatQueries.swift  ChatViewModelServices.swift  Haptics.swift  HealthKitProvider.swift  Info.plist  LocationProvider.swift  NotificationRouting.swift  PhantasmApp.swift
ios/App/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/App/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/App/Assets.xcassets/MasksLogo.imageset/: Contents.json
ios/App/Intents/: AskPhantasmIntent.swift
ios/App/Speech/: DictationController.swift  SpeechModels.swift  SpeechSynthesizer.swift
ios/App/Speech/Dictation/: DictationEngine.swift  LegacySpeechDictationEngine.swift  SpeechAnalyzerDictationEngine.swift
ios/Phantasm.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/Tests/: ChatViewModelTests.swift  DictationControllerTests.swift
ios/UITests/: SidebarScrollUITests.swift
ios/ViewModels/: ChatViewModel.swift  ImageProcessing.swift  PendingAttachment.swift
ios/Views/: RootView.swift
ios/Views/Chat/: AttachmentViews.swift  CalendarEventPromptView.swift  ChartView.swift  ChatView.swift  ChoicePromptView.swift  ComposerOptionsSheet.swift  ContextLimitBanner.swift  GeneratedAudioNowPlayingCoordinator.swift  HistoryDrawer.swift  ImageViewer.swift  LoadingIndicators.swift  MarkdownMessageView.swift  MessageBubble.swift
ios/Views/Common/: HorizontalPanGesture.swift  StatusPill.swift
ios/Views/Pairing/: PairingQRView.swift  PairingRoute.swift  PairingScanSheet.swift
ios/Views/Settings/: OnboardingView.swift  PrivacyDataView.swift  ProfileEditView.swift  SettingsView.swift  VoiceSettingsView.swift
ios/ci_scripts/: ci_post_clone.sh
orchestrator/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
orchestrator/deploy/: phantasm-orchestrator.service
orchestrator/docker/code-exec/: Dockerfile  README.md  run-code
orchestrator/src/: auth.rs  config.rs  error.rs  history.rs  host_stats.rs  image_norm.rs  images.rs  lib.rs  main.rs  metrics.rs  metrics_store.rs  net_guard.rs  pairing.rs  state.rs  turn_registry.rs  upstreams.rs  xml_tools.rs
orchestrator/src/ollama/: client.rs  mod.rs  types.rs  xml_tools.rs
orchestrator/src/openai/: mod.rs  retry.rs  sse.rs  types.rs  upstream.rs
orchestrator/src/orchestrator/: mod.rs  presets.rs  research.rs  tools.rs  turn.rs
orchestrator/src/routes/: capabilities.rs  chat.rs  dashboard.html  dashboard.rs  health.rs  images.rs  metrics.rs  mod.rs  models.rs  warm.rs
orchestrator/src/tools/: audio_gen.rs  calculator.rs  code_exec.rs  code_exec_pool.rs  comfy.rs  current_time.rs  github.rs  http_util.rs  image_delivery.rs  image_edit.rs  image_gen.rs  maps_places.rs  market_data.rs  mod.rs  ocr.rs  sports.rs  time.rs  unit_convert.rs  video_gen.rs  weather.rs  web_fetch.rs  web_search.rs
orchestrator/tests/: integration.rs  real_comfy.rs  real_upstreams.rs
orchestrator/workflows/: default_sd15.json  sd15_img2img.json  sd15_txt2img.json
site/: README.md  index.html  privacy.html  style.css  support.html
