[package]
name = "phantasm-orchestrator"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "OpenAI-compatible orchestration proxy for self-hosted Ollama + ComfyUI"
license = "MIT"

[[bin]]
name = "phantasm-orchestrator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
url = { version = "2", features = ["serde"] }

[features]
default = []
# Enables optional bounded full-page fetching for web search (off by default;
# snippet-first remains the default path). No extra deps — uses reqwest + a
# minimal HTML-to-text pass.
page_fetch = []

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "test-util"] }
