[package]
name = "phantasm-orchestrator"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "OpenAI-compatible orchestration proxy for self-hosted Ollama + ComfyUI"
license = "MIT"

[[bin]]
name = "phantasm-orchestrator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "process"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
async-openai = { version = "0.41.1", default-features = false, features = ["byot", "chat-completion", "rustls"] }
reqwest13 = { package = "reqwest", version = "0.13.4", default-features = false, features = ["rustls"] }
secrecy = "0.10"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
url = { version = "2", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
tempfile = "3"

# systemd readiness/`Type=notify` integration. Pure-Rust (no libsystemd link),
# unix-only; a no-op unless `$NOTIFY_SOCKET` is set, so dev/Docker are unaffected.
[target.'cfg(unix)'.dependencies]
sd-notify = "0.4"

[features]
default = ["gzip"]
# HTTP response compression. Turns on reqwest's gzip handling so it negotiates
# Accept-Encoding itself and auto-decompresses responses. On by default: the
# thorough (full-page-fetch) search path pulls down whole HTML pages where
# compression is a clear win; snippet responses are a few KB and RTT-bound, so it
# only adds a cheap decompress step there. Requires that we never hand-set
# Accept-Encoding (doing so disables reqwest's auto-decompress). Disable with
# `--no-default-features` if a deployment never fetches pages.
gzip = ["reqwest/gzip"]

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "test-util"] }
